feat(#21): /me APIでメニューと権限情報の統合を実装し、認可処理の基盤を完成
/me APIにてログインユーザーのメニュー（MenuTree）および権限（Permission）情報の取得処理を実装。
RBACモデルに基づき、ユーザーに紐づくメニュー構造と権限コードを統合して返却することで、
フロントエンド側での動的メニュー表示および権限制御を実現。

在 /me 接口中实现菜单（MenuTree）与权限（Permission）的整合处理，
基于 RBAC 模型构建用户对应的菜单结构与权限数据，
为前端动态菜单与权限控制提供基础支持。